minor alignment fix

--- a/blocks/icon-block/icon-block.scss
+++ b/blocks/icon-block/icon-block.scss
@@ -22,7 +22,7 @@
 
   .icon-heading {
     font-size: 20px;
-    margin: 0;
+    margin: 0 auto;
     line-height: 33px;
     color: var(--spectrum-gray-800);
     font-weight: bold;
